# Sirius_BG

./: .gitignore  dz1.py  dz3.py
1/dz2.2/: logic.py  main.py
1/dz4/: dz4.py
1/dz5/: ui.py
1/dz6/: color_database.py  graph_app.py  graph_data.py
1/dz7/: interface.py
1/dz8/: main.py
1/editor/: file_utils.py  layers.py  main.py
2/1/: main.cpp
2/2/: main.cpp
2/3/: main.cpp
C_project/: Application.cpp  Application.h  CMakeLists.txt  RouteOptimizer.cpp  RouteOptimizer.h
dz2/: dz2.py
dz3/: paint.py
dz5/: script.py
dz6/: config.py
dz7/: interface.py  main.py
dz9/: main.py
editor/: canvas_manager.py  config.py  file_utils.py  layers.py  main.py
